[package]
name = "bevy_arcade_stacker"
version = "0.1.0"
authors = ["Kamran Fardanesh <kamran.fardanesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
